--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 # Allow sharp to run build scripts for Next.js image optimization
 enable-pre-post-scripts=true
+
+# Allow specific packages to run build scripts
